Project SmartFactory_MVP_04_End_To_End_Flow {
  database_type: 'PostgreSQL'
  Note: '''
  입고/출고 end-to-end 흐름 그림.
  1) task 생성 2) robot/location/item 예약 3) commands 순차 실행
  4) evidence로 완료 판단 5) inventory와 item_change_logs 반영
  6) task_logs에 최종 결과 스냅샷 저장.
  사람 감지 시 safety_stops가 중간에 개입한다.
  '''
}

Table robots {
  id text [pk, note: 'tb3_1/tb3_2']
  domain_id integer [not null]
  status text [not null]
  battery_level float8
  location_id text [ref: > locations.id]
  active_task_id bigint [ref: > tasks.id]
}

Table locations {
  id text [pk, note: 'INBOUND_01/STORAGE_A_01/OUTBOUND_01/CHARGE_01']
  type text [not null, note: 'AREA/WAYPOINT/SLOT/CHARGE']
  status text [not null]
  approach_id text [ref: > locations.id]
  marker_id integer
}

Table items {
  id text [pk, note: 'BOLT_M3/MOTOR_A/SENSOR_KIT']
}

Table inventory {
  item_id text [not null, ref: > items.id]
  location_id text [not null, ref: > locations.id]
  quantity integer [not null]

  indexes {
    (item_id, location_id) [pk]
  }
}

Table tasks {
  id bigint [pk]
  task_type text [not null, note: 'INBOUND/OUTBOUND/MOVE/RECOVERY/CHARGING']
  status text [not null]
  priority integer [not null]
  robot_id text [ref: > robots.id]
  item_id text [ref: > items.id]
  quantity integer [not null]
  from_location_id text [ref: > locations.id]
  to_location_id text [ref: > locations.id]
  started_at timestamptz
  finished_at timestamptz
}

Table reservations {
  id bigint [pk]
  type text [not null, note: 'ROBOT/LOCATION/ITEM']
  status text [not null, note: 'ACTIVE/RELEASED/EXPIRED/CANCELLED']
  task_id bigint [not null, ref: > tasks.id]
  robot_id text [ref: > robots.id]
  location_id text [ref: > locations.id]
  item_id text [ref: > items.id]
}

Table commands {
  id bigint [pk]
  task_id bigint [ref: > tasks.id]
  robot_id text [ref: > robots.id]
  sequence_no integer [not null]
  command_type text [not null, note: 'NAV_GOAL/PICK_UP/DROP_OFF/STOP/RESUME/START_CHARGING/STOP_CHARGING']
  status text [not null]
  location_id text [ref: > locations.id]
  required_evidence_type text

  indexes {
    (task_id, sequence_no) [unique]
  }
}

Table evidence_events {
  id bigint [pk]
  event_type text [not null, note: 'NAV_REACHED/ITEM_PICKED/ITEM_PLACED/HUMAN_DETECTED/HUMAN_CLEAR/etc']
  source text [not null]
  robot_id text [ref: > robots.id]
  task_id bigint [ref: > tasks.id]
  command_id bigint [ref: > commands.id]
  location_id text [ref: > locations.id]
  trusted boolean [not null, default: false]
}

Table safety_stops {
  id bigint [pk]
  status text [not null]
  robot_id text [ref: > robots.id]
  task_id bigint [ref: > tasks.id]
  detected_evidence_id bigint [ref: > evidence_events.id]
  stop_command_id bigint [ref: > commands.id]
  clear_evidence_id bigint [ref: > evidence_events.id]
}

Table task_logs {
  id bigint [pk]
  task_id bigint [not null, ref: > tasks.id]
  robot_id text [ref: > robots.id]
  item_id text [ref: > items.id]
  result text [not null]
  snapshot_json jsonb
  logged_at timestamptz [not null]
}

Table item_change_logs {
  id bigint [pk]
  item_id text [not null, ref: > items.id]
  location_id text [ref: > locations.id]
  task_id bigint [ref: > tasks.id]
  event_type text [not null]
  quantity_change integer [not null]
  quantity_before integer
  quantity_after integer
  changed_at timestamptz [not null]
}
